--- a/TechMasterMainProgram/TechMasterMainProgram/IWeather.xib
+++ b/TechMasterMainProgram/TechMasterMainProgram/IWeather.xib
@@ -6,8 +6,12 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="IWeather">
             <connections>
-                <outlet property="mainView" destination="aiT-iQ-x9g" id="CcB-wu-fTa"/>
+                <outlet property="location" destination="U1C-6H-P17" id="GNV-4w-V38"/>
+                <outlet property="quote" destination="kdz-BN-nzU" id="Orl-EA-4EK"/>
+                <outlet property="tempType" destination="CbV-eP-yoT" id="pvO-eV-m3n"/>
+                <outlet property="temperature" destination="Njn-Fz-9UJ" id="NLr-86-K90"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
+                <outlet property="weather" destination="Ide-Mg-8pG" id="JOj-bP-FvV"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -15,70 +19,96 @@
             <rect key="frame" x="0.0" y="0.0" width="375" height="646"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <view contentMode="scaleToFill" ambiguous="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="aiT-iQ-x9g">
-                    <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                    <subviews>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Có công mài sắt có ngày nên kim" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kdz-BN-nzU">
-                            <rect key="frame" x="47" y="476" width="281" height="73"/>
-                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                            <color key="textColor" red="1" green="0.43529412150000002" blue="0.81176471709999998" alpha="1" colorSpace="calibratedRGB"/>
-                            <nil key="highlightedColor"/>
-                        </label>
-                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="location" translatesAutoresizingMaskIntoConstraints="NO" id="DJR-uI-9tw">
-                            <rect key="frame" x="19" y="82" width="30" height="30"/>
-                        </imageView>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Ha Noi, Viet Nam" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="U1C-6H-P17">
-                            <rect key="frame" x="57" y="86" width="203" height="21"/>
-                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                            <nil key="highlightedColor"/>
-                        </label>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="o" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SJJ-hh-cZm">
-                            <rect key="frame" x="286" y="124" width="24" height="21"/>
-                            <fontDescription key="fontDescription" type="boldSystem" pointSize="25"/>
-                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                            <nil key="highlightedColor"/>
-                        </label>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="C" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CbV-eP-yoT">
-                            <rect key="frame" x="297" y="143" width="31" height="26"/>
-                            <fontDescription key="fontDescription" type="boldSystem" pointSize="25"/>
-                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                            <nil key="highlightedColor"/>
-                        </label>
-                        <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Njn-Fz-9UJ">
-                            <rect key="frame" x="64" y="124" width="246" height="128"/>
-                            <fontDescription key="fontDescription" type="boldSystem" pointSize="120"/>
-                            <state key="normal" title="34.1">
-                                <color key="titleColor" red="0.96862745100000003" green="0.2528402736" blue="0.2908858808" alpha="1" colorSpace="calibratedRGB"/>
-                                <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                            </state>
-                            <connections>
-                                <action selector="convertTemperature:" destination="-1" eventType="touchUpInside" id="XER-4y-oSd"/>
-                            </connections>
-                        </button>
-                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="sunny" translatesAutoresizingMaskIntoConstraints="NO" id="Ide-Mg-8pG">
-                            <rect key="frame" x="123" y="302" width="128" height="128"/>
-                        </imageView>
-                        <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8Xy-fe-aVq">
-                            <rect key="frame" x="163" y="571" width="48" height="48"/>
-                            <state key="normal" title="Button" image="reload">
-                                <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                            </state>
-                            <connections>
-                                <action selector="reload:" destination="-1" eventType="touchUpInside" id="jus-Mv-lgF"/>
-                            </connections>
-                        </button>
-                    </subviews>
-                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="location" translatesAutoresizingMaskIntoConstraints="NO" id="DJR-uI-9tw">
+                    <rect key="frame" x="8" y="87" width="32" height="32"/>
                     <constraints>
-                        <constraint firstAttribute="centerX" secondItem="Njn-Fz-9UJ" secondAttribute="centerX" id="38p-vc-WZM"/>
+                        <constraint firstAttribute="width" constant="32" id="ECE-02-kkK"/>
+                        <constraint firstAttribute="height" constant="32" id="Qos-ad-pEE"/>
                     </constraints>
-                </view>
+                </imageView>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Ha Noi, Viet Nam" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="U1C-6H-P17">
+                    <rect key="frame" x="48" y="87" width="132" height="32"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="32" id="ocT-Yg-gDQ"/>
+                    </constraints>
+                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                    <nil key="highlightedColor"/>
+                </label>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="o" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SJJ-hh-cZm">
+                    <rect key="frame" x="286" y="130" width="24" height="21"/>
+                    <fontDescription key="fontDescription" type="boldSystem" pointSize="25"/>
+                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                    <nil key="highlightedColor"/>
+                </label>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="C" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CbV-eP-yoT">
+                    <rect key="frame" x="310" y="140" width="18" height="30"/>
+                    <fontDescription key="fontDescription" type="boldSystem" pointSize="25"/>
+                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                    <nil key="highlightedColor"/>
+                </label>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Njn-Fz-9UJ">
+                    <rect key="frame" x="71" y="159" width="233" height="116"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="116" id="RS3-ep-vAY"/>
+                    </constraints>
+                    <fontDescription key="fontDescription" type="boldSystem" pointSize="120"/>
+                    <state key="normal" title="34.1">
+                        <color key="titleColor" red="0.96862745100000003" green="0.2528402736" blue="0.2908858808" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                    </state>
+                    <connections>
+                        <action selector="convertTemperature:" destination="-1" eventType="touchUpInside" id="pbi-8Z-ZQD"/>
+                    </connections>
+                </button>
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="sunny" translatesAutoresizingMaskIntoConstraints="NO" id="Ide-Mg-8pG">
+                    <rect key="frame" x="123" y="304" width="128" height="128"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="128" id="Vmu-6g-I2A"/>
+                        <constraint firstAttribute="width" constant="128" id="sQC-na-s4e"/>
+                    </constraints>
+                </imageView>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8Xy-fe-aVq">
+                    <rect key="frame" x="162" y="570" width="50" height="50"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="50" id="FUu-TP-y37"/>
+                        <constraint firstAttribute="width" constant="50" id="nZ5-oy-b1V"/>
+                    </constraints>
+                    <state key="normal" title="Button" image="reload">
+                        <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                    </state>
+                    <connections>
+                        <action selector="reload:" destination="-1" eventType="touchUpInside" id="sF4-41-mS0"/>
+                    </connections>
+                </button>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Có công mài sắt có ngày nên kim" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kdz-BN-nzU">
+                    <rect key="frame" x="58" y="440" width="258" height="80"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="80" id="Plb-Nl-wRR"/>
+                    </constraints>
+                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                    <color key="textColor" red="1" green="0.43529412150000002" blue="0.81176471709999998" alpha="1" colorSpace="calibratedRGB"/>
+                    <nil key="highlightedColor"/>
+                </label>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <constraints>
-                <constraint firstAttribute="centerY" secondItem="aiT-iQ-x9g" secondAttribute="centerY" id="M1y-2g-5VF"/>
-                <constraint firstAttribute="centerX" secondItem="aiT-iQ-x9g" secondAttribute="centerX" id="OdC-ph-Ohm"/>
+                <constraint firstAttribute="bottom" secondItem="8Xy-fe-aVq" secondAttribute="bottom" constant="26" id="3Sv-VF-Et9"/>
+                <constraint firstItem="U1C-6H-P17" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="87" id="9fk-iI-I6H"/>
+                <constraint firstAttribute="centerX" secondItem="Njn-Fz-9UJ" secondAttribute="centerX" id="B2N-6R-f7P"/>
+                <constraint firstItem="DJR-uI-9tw" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="8" id="DaE-3s-Uid"/>
+                <constraint firstItem="CbV-eP-yoT" firstAttribute="leading" secondItem="Njn-Fz-9UJ" secondAttribute="trailing" constant="6" id="EKp-eH-GR8"/>
+                <constraint firstItem="DJR-uI-9tw" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="87" id="I8j-M6-uIt"/>
+                <constraint firstAttribute="centerX" secondItem="kdz-BN-nzU" secondAttribute="centerX" id="NiY-qr-Cir"/>
+                <constraint firstItem="8Xy-fe-aVq" firstAttribute="top" secondItem="kdz-BN-nzU" secondAttribute="bottom" constant="50" id="Ns4-jt-I8N"/>
+                <constraint firstAttribute="trailing" secondItem="Ide-Mg-8pG" secondAttribute="trailing" constant="124" id="a1n-zX-0AL"/>
+                <constraint firstAttribute="centerX" secondItem="8Xy-fe-aVq" secondAttribute="centerX" id="ahb-4T-X4n"/>
+                <constraint firstItem="Njn-Fz-9UJ" firstAttribute="top" secondItem="U1C-6H-P17" secondAttribute="bottom" constant="40" id="e5n-uT-USB"/>
+                <constraint firstItem="Njn-Fz-9UJ" firstAttribute="top" secondItem="SJJ-hh-cZm" secondAttribute="bottom" constant="8" id="ehV-wN-bWz"/>
+                <constraint firstItem="Ide-Mg-8pG" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="123" id="nLu-Yr-AZ5"/>
+                <constraint firstItem="Ide-Mg-8pG" firstAttribute="top" secondItem="Njn-Fz-9UJ" secondAttribute="bottom" constant="29" id="vTg-do-ZFM"/>
+                <constraint firstItem="U1C-6H-P17" firstAttribute="leading" secondItem="DJR-uI-9tw" secondAttribute="trailing" constant="8" id="xGu-v7-q4t"/>
+                <constraint firstAttribute="centerX" secondItem="kdz-BN-nzU" secondAttribute="centerX" id="y2k-fQ-ONk"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <point key="canvasLocation" x="285.5" y="515"/>
