skew image final

--- a/TechMasterMainProgram/TechMasterMainProgram/SkewImage.xib
+++ b/TechMasterMainProgram/TechMasterMainProgram/SkewImage.xib
@@ -17,15 +17,12 @@
             <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <slider opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" minValue="-90" maxValue="90" translatesAutoresizingMaskIntoConstraints="NO" id="Vo0-T1-vja">
-                    <rect key="frame" x="35" y="555" width="304" height="31"/>
-                    <connections>
-                        <action selector="onChangeValueSlider:" destination="-1" eventType="valueChanged" id="V8K-ls-rb7"/>
-                    </connections>
-                </slider>
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="footBall.jpeg" translatesAutoresizingMaskIntoConstraints="NO" id="O2E-mj-WL7">
+                    <rect key="frame" x="59" y="53" width="257" height="421"/>
+                </imageView>
                 <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pqA-KB-W1b">
-                    <rect key="frame" x="128" y="613" width="118" height="30"/>
-                    <color key="backgroundColor" red="0.16078431900000001" green="0.7254902124" blue="0.20000001789999999" alpha="1" colorSpace="deviceRGB"/>
+                    <rect key="frame" x="128" y="553" width="118" height="30"/>
+                    <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                     <state key="normal" title="Auto">
                         <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
@@ -34,9 +31,12 @@
                         <action selector="onCLickAutoButton:" destination="-1" eventType="touchUpInside" id="I5q-un-nRb"/>
                     </connections>
                 </button>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="footBall.jpeg" translatesAutoresizingMaskIntoConstraints="NO" id="O2E-mj-WL7">
-                    <rect key="frame" x="37" y="86" width="300" height="438"/>
-                </imageView>
+                <slider opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" minValue="-90" maxValue="90" translatesAutoresizingMaskIntoConstraints="NO" id="Vo0-T1-vja">
+                    <rect key="frame" x="60" y="591" width="255" height="31"/>
+                    <connections>
+                        <action selector="onChangeValueSlider:" destination="-1" eventType="valueChanged" id="V8K-ls-rb7"/>
+                    </connections>
+                </slider>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
             <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
