--- a/TechMasterMainProgram/TechMasterMainProgram/BasicView.xib
+++ b/TechMasterMainProgram/TechMasterMainProgram/BasicView.xib
@@ -22,7 +22,7 @@
             <subviews>
                 <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="2VN-At-3i2">
                     <rect key="frame" x="53" y="119" width="268" height="118"/>
-                    <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                    <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                 </view>
                 <slider opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="1" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="6Ug-zJ-63n">
                     <rect key="frame" x="71" y="380" width="252" height="31"/>
