--- a/TechMasterMainProgram/TechMasterMainProgram/DemoSelector.xib
+++ b/TechMasterMainProgram/TechMasterMainProgram/DemoSelector.xib
@@ -1,68 +1,63 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7702" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7702" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7701"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="DemoSelector">
             <connections>
-                <outlet property="slider" destination="8h9-Eg-Odr" id="1N4-Wd-nHB"/>
+                <outlet property="imageView" destination="mtf-LR-clB" id="VA3-sF-XVb"/>
+                <outlet property="labelCountDown" destination="ftc-SR-blU" id="FGp-Ll-kIS"/>
+                <outlet property="slider" destination="NqI-5e-W1d" id="aZh-pF-v5U"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
-            <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+            <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="edA-JU-2tf">
-                    <rect key="frame" x="-23" y="-15" width="46" height="30"/>
-                    <state key="normal" title="Crunch Data">
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="spiderman.png" id="mtf-LR-clB">
+                    <rect key="frame" x="38" y="161" width="298" height="212"/>
+                    <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                </imageView>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="wSc-hg-NER">
+                    <rect key="frame" x="156" y="537" width="62" height="30"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <color key="backgroundColor" red="0.16078431900000001" green="0.7254902124" blue="0.20000001789999999" alpha="1" colorSpace="deviceRGB"/>
+                    <state key="normal" title="Cruch">
+                        <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                     </state>
                     <connections>
-                        <action selector="onCruchData:" destination="-1" eventType="touchUpInside" id="8UY-3R-xP3"/>
+                        <action selector="onCruchData:" destination="-1" eventType="touchUpInside" id="JBD-Jo-kSJ"/>
                     </connections>
                 </button>
-                <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="8h9-Eg-Odr">
-                    <rect key="frame" x="0.0" y="-15" width="118" height="31"/>
+                <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" id="NqI-5e-W1d">
+                    <rect key="frame" x="36" y="453" width="302" height="31"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 </slider>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="ftc-SR-blU">
+                    <rect key="frame" x="166" y="397" width="42" height="34"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <color key="backgroundColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                    <nil key="highlightedColor"/>
+                </label>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
-            <constraints>
-                <constraint firstItem="8h9-Eg-Odr" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="8" id="BRL-aq-8xc"/>
-                <constraint firstItem="edA-JU-2tf" firstAttribute="top" secondItem="8h9-Eg-Odr" secondAttribute="bottom" constant="52" id="HPR-AC-yFE"/>
-                <constraint firstAttribute="trailing" secondItem="8h9-Eg-Odr" secondAttribute="trailing" constant="8" id="SGJ-bF-rKo"/>
-                <constraint firstAttribute="centerX" secondItem="edA-JU-2tf" secondAttribute="centerX" id="kgt-Mb-z8A"/>
-                <constraint firstItem="8h9-Eg-Odr" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="69" id="zGy-H0-Qea"/>
-            </constraints>
-            <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-            <variation key="default">
-                <mask key="subviews">
-                    <exclude reference="edA-JU-2tf"/>
-                    <exclude reference="8h9-Eg-Odr"/>
-                </mask>
-                <mask key="constraints">
-                    <exclude reference="BRL-aq-8xc"/>
-                    <exclude reference="SGJ-bF-rKo"/>
-                    <exclude reference="zGy-H0-Qea"/>
-                    <exclude reference="HPR-AC-yFE"/>
-                    <exclude reference="kgt-Mb-z8A"/>
-                </mask>
-            </variation>
-            <variation key="heightClass=compact-widthClass=compact">
-                <mask key="subviews">
-                    <include reference="edA-JU-2tf"/>
-                    <include reference="8h9-Eg-Odr"/>
-                </mask>
-                <mask key="constraints">
-                    <include reference="BRL-aq-8xc"/>
-                    <include reference="SGJ-bF-rKo"/>
-                    <include reference="zGy-H0-Qea"/>
-                    <include reference="HPR-AC-yFE"/>
-                    <include reference="kgt-Mb-z8A"/>
-                </mask>
-            </variation>
+            <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
+            <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
+            <point key="canvasLocation" x="258.5" y="432.5"/>
         </view>
     </objects>
+    <resources>
+        <image name="spiderman.png" width="800" height="496"/>
+    </resources>
+    <simulatedMetricsContainer key="defaultSimulatedMetrics">
+        <simulatedStatusBarMetrics key="statusBar"/>
+        <simulatedOrientationMetrics key="orientation"/>
+        <simulatedScreenMetrics key="destination" type="retina4"/>
+    </simulatedMetricsContainer>
 </document>
